apps/base/minecraft/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bluemap-basicauth
  namespace: minecraft
spec:
  basicAuth:
    secret: bluemap-auth
